; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_algo.c_xfrm_alg_id_match.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_algo.c_xfrm_alg_id_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_algo_desc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xfrm_algo_desc*, i8*)* @xfrm_alg_id_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfrm_alg_id_match(%struct.xfrm_algo_desc* %0, i8* %1) #0 {
  %3 = alloca %struct.xfrm_algo_desc*, align 8
  %4 = alloca i8*, align 8
  store %struct.xfrm_algo_desc* %0, %struct.xfrm_algo_desc** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.xfrm_algo_desc*, %struct.xfrm_algo_desc** %3, align 8
  %6 = getelementptr inbounds %struct.xfrm_algo_desc, %struct.xfrm_algo_desc* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = ptrtoint i8* %9 to i64
  %11 = icmp eq i64 %8, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
